Added new JavaFx lib under win